--- a/src/index.html
+++ b/src/index.html
@@ -42,15 +42,25 @@
                             О системе
                             <i class="fa fa-sort-desc" aria-hidden="true"></i>
                         </span>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Владельцам</a></li>
+                    <li>
+                        <span>
+                            Владельцам
+                            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+                        </span>
+                        <ul class="dropdown">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Публикации</a></li>
                     <li><a href="#">Цто</a></li>
                     <li><a href="#">Контакты</a></li>
