--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,12 @@
         <div class="container">
             <div class="wrapper_nav">
                 <div class="home_icon">
-                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <a class="active" href="/">
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <ul>
-                    <li><a href="#">Главная</a></li>
+                    <li><a class="active" href="#">Главная</a></li>
                     <li>
                         <span>
                             О системе
@@ -50,7 +52,7 @@
                         </ul>
                     </li>
                     <li>
-                        <span>
+                        <span class="active">
                             Владельцам
                             <i class="fa fa-sort-desc" aria-hidden="true"></i>
                         </span>
