--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,7 @@
                             <i class="fa fa-sort-desc" aria-hidden="true"></i>
                         </span>
                         <ul class="dropdown">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">Описание СККО</a></li>
                         </ul>
                     </li>
                     <li>
@@ -57,13 +54,24 @@
                             <i class="fa fa-sort-desc" aria-hidden="true"></i>
                         </span>
                         <ul class="dropdown">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">Порядок заключения договора</a></li>
+                            <li><a href="#">Документы</a></li>
+                            <li><a href="#">График подключения к скко</a></li>
+                            <li><a href="#">Тарифы и способы оплаты</a></li>
+                            <li><a href="#">Вопросы/Ответы</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Публикации</a></li>
+                    <li>
+                        <span>
+                            Публикации
+                            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+                        </span>
+                        <ul class="dropdown">
+                            <li><a href="#">Новости</a></li>
+                            <li><a href="#">Нормативные правовые акты</a></li>
+                            <li><a href="#">Разъяснения МНС</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Цто</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Наши партнёры</a></li>
