--- a/src/index.html
+++ b/src/index.html
@@ -38,38 +38,35 @@
                     </a>
                 </div>
                 <ul>
-                    <li><a class="active" href="#">Главная</a></li>
-                    <li>
+                    <li class="active"><a href="#">Главная</a></li>
+                    <li class="dropdown">
                         <span>
                             О системе
                         </span>
-                        <i class="fa fa-sort-desc" aria-hidden="true"></i>
-
-                        <ul class="dropdown">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        <ul>
                             <li><a href="#">Описание СККО</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <span class="active">
+                    <li class="dropdown active">
+                        <span>
                             Владельцам
                         </span>
-                        <i class="fa fa-sort-desc" aria-hidden="true"></i>
-
-                        <ul class="dropdown">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        <ul>
                             <li><a href="#">Порядок заключения договора</a></li>
                             <li><a href="#">Документы</a></li>
-                            <li><a href="#">График подключения к скко</a></li>
+                            <li><a class="active" href="#">График подключения к скко</a></li>
                             <li><a href="#">Тарифы и способы оплаты</a></li>
                             <li><a href="#">Вопросы/Ответы</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="dropdown">
                         <span>
                             Публикации
                         </span>
-                        <i class="fa fa-sort-desc" aria-hidden="true"></i>
-
-                        <ul class="dropdown">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        <ul>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Нормативные правовые акты</a></li>
                             <li><a href="#">Разъяснения МНС</a></li>
