Добавил класс для ссылки активного пункта меню

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                     </a>
                 </div>
                 <ul>
-                    <li class="active"><a href="#">Главная</a></li>
+                    <li><a class="active" href="#">Главная</a></li>
                     <li class="dropdown">
                         <span>
                             О системе
@@ -56,7 +56,7 @@
                         <ul>
                             <li><a href="#">Порядок заключения договора</a></li>
                             <li><a href="#">Документы</a></li>
-                            <li><a class="active" href="#">График подключения к скко</a></li>
+                            <li><a class="active" href="#">График подключения к СККО</a></li>
                             <li><a href="#">Тарифы и способы оплаты</a></li>
                             <li><a href="#">Вопросы/Ответы</a></li>
                         </ul>
