Доработки по меню

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,18 @@
                     <li><a href="#">Цто</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Наши партнёры</a></li>
+                    <!--<li class="dropdown">-->
+                        <!--<span>-->
+                            <!--Публикации-->
+                        <!--</span>-->
+                        <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
+                        <!--<ul>-->
+                            <!--<li><a href="#">Новости</a></li>-->
+                            <!--<li><a href="#">Нормативные правовые акты</a></li>-->
+                            <!--<li><a href="#">Разъяснения МНС</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
+
                 </ul>
             </div>
         </div><!-- /.container -->
