Добавлена директива для скрытия главного меню при разрешении экрана меньше 768px

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 <header id="header">
     <nav class="navbar">
         <div class="container">
-            <div class="wrapper_nav">
+            <div class="wrapper_nav hidden-xs">
                 <div class="home_icon">
                     <a class="active" href="/">
                         <i class="fa fa-home" aria-hidden="true"></i>
@@ -92,6 +92,13 @@
         </div><!-- /.container -->
     </nav>
 </header>
+<section id="slider">
+    <div class="container">
+        <div class="slider_wrapper">
+
+        </div>
+    </div>
+</section>
 
 <!--[if lt IE 9]>
 <script src="libs/html5shiv/es5-shim.min.js"></script>
