--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
 <header id="header">
     <nav class="navbar">
         <div class="container">
+            <div class="menu_icon visible-xs-block">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
             <div class="wrapper_nav hidden-xs">
                 <div class="home_icon">
                     <a class="active" href="/">
