--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,15 @@
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Наши партнёры</a></li>
                     <!--<li class="dropdown">-->
-                        <!--<span>-->
-                            <!--Публикации-->
-                        <!--</span>-->
-                        <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">Новости</a></li>-->
-                            <!--<li><a href="#">Нормативные правовые акты</a></li>-->
-                            <!--<li><a href="#">Разъяснения МНС</a></li>-->
-                        <!--</ul>-->
+                    <!--<span>-->
+                    <!--Публикации-->
+                    <!--</span>-->
+                    <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
+                    <!--<ul>-->
+                    <!--<li><a href="#">Новости</a></li>-->
+                    <!--<li><a href="#">Нормативные правовые акты</a></li>-->
+                    <!--<li><a href="#">Разъяснения МНС</a></li>-->
+                    <!--</ul>-->
                     <!--</li>-->
 
                 </ul>
@@ -96,34 +96,40 @@
     </nav>
     <nav class="mobile_menu visible-xs-block">
         <div class="container">
-            <div id="mob_menu">
-                <div class="well">
-                <div class="item">
-                    <a href="#">Главная</a>
-                </div>
-                <div class="item" data-toggle="collapse" data-target="#itemMenu1">
-                <span>О системе</span>
-                    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
-                </div>
-                <div class="collapse" id="itemMenu1">
-                    <ul>
-                        <li><a href="#">Описание СККО</a></li>
-                    </ul>
-                </div>
-                <div class="item" data-toggle="collapse" data-target="#itemMenu2">
-                    <span>Владельцам</span>
-                    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
-                </div>
-                <div class="collapse" id="itemMenu2">
-                    <ul>
-                        <li><a href="#">Порядок заключения договора</a></li>
-                        <li><a href="#">Документы</a></li>
-                        <li><a class="active" href="#">График подключения к СККО</a></li>
-                        <li><a href="#">Тарифы и способы оплаты</a></li>
-                        <li><a href="#">Вопросы/Ответы</a></li>
-                    </ul>
-                </div>
-                </div>
+            <div id="mob_menu" class="collapse">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li data-toggle="collapse" data-target="#item1">
+                        <span>О системе</span>
+                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <ul class="collapse" id="item1">
+                            <li><a href="#">Описание СККО</a></li>
+                        </ul>
+                    </li>
+                    <li data-toggle="collapse" data-target="#item2">
+                        <span>Владельцам</span>
+                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <ul class="collapse" id="item2">
+                            <li><a href="#">Порядок заключения договора</a></li>
+                            <li><a href="#">Документы</a></li>
+                            <li><a href="#">График подключения к СККО</a></li>
+                            <li><a href="#">Тарифы и способы оплаты</a></li>
+                            <li><a href="#">Вопросы/Ответы</a></li>
+                        </ul>
+                    </li>
+                    <li data-toggle="collapse" data-target="#item3">
+                        <span>Публикации</span>
+                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <ul class="collapse" id="item3">
+                            <li><a href="#">Новости</a></li>
+                            <li><a href="#">Нормативные правовые акты</a></li>
+                            <li><a href="#">Разъяснения МНС</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">ЦТО</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#">Наши партнёры</a></li>
+                </ul>
             </div><!--end #mob_menu-->
         </div><!--end container-->
     </nav><!--end mobile_menu-->
