добавлен блок title

--- a/src/index.html
+++ b/src/index.html
@@ -100,15 +100,19 @@
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li data-toggle="collapse" data-target="#item1">
-                        <span>О системе</span>
-                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <div class="title">
+                            <span>О системе</span>
+                            <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        </div>
                         <ul class="collapse" id="item1">
                             <li><a href="#">Описание СККО</a></li>
                         </ul>
                     </li>
                     <li data-toggle="collapse" data-target="#item2">
-                        <span>Владельцам</span>
-                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <div class="title">
+                            <span>Владельцам</span>
+                            <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        </div>
                         <ul class="collapse" id="item2">
                             <li><a href="#">Порядок заключения договора</a></li>
                             <li><a href="#">Документы</a></li>
@@ -118,8 +122,10 @@
                         </ul>
                     </li>
                     <li data-toggle="collapse" data-target="#item3">
-                        <span>Публикации</span>
-                        <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        <div class="title">
+                            <span>Публикации</span>
+                            <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                        </div>
                         <ul class="collapse" id="item3">
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Нормативные правовые акты</a></li>
