добавлено выделение активных пунктов меню цветом

--- a/src/index.html
+++ b/src/index.html
@@ -109,14 +109,14 @@
                         </ul>
                     </li>
                     <li data-toggle="collapse" data-target="#item2">
-                        <div class="title">
+                        <div class="title active">
                             <span>Владельцам</span>
                             <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
                         </div>
                         <ul class="collapse" id="item2">
                             <li><a href="#">Порядок заключения договора</a></li>
                             <li><a href="#">Документы</a></li>
-                            <li><a href="#">График подключения к СККО</a></li>
+                            <li><a class="active" href="#">График подключения к СККО</a></li>
                             <li><a href="#">Тарифы и способы оплаты</a></li>
                             <li><a href="#">Вопросы/Ответы</a></li>
                         </ul>
