добавлен поиск в мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,14 @@
     <nav class="mobile_menu visible-xs-block">
         <div class="container">
             <div id="mob_menu" class="collapse">
+                <div class="search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Найти...">
+                        <span class="input-group-btn">
+                            <button class="btn btn-success" type="button">Поиск</button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div>
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li data-toggle="collapse" data-target="#item1">
