добавлена бегущая строка в верхнее меню

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
         <div class="container">
             <div class="menu_icon visible-xs-block">
                 <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
+                <div class="run_string">
+                    <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, saepe.</marquee>
+                </div>
             </div>
             <div class="wrapper_nav hidden-xs">
                 <div class="home_icon">
