настроено отображение бегущей строки

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,11 @@
     <nav class="navbar">
         <div class="container">
             <div class="menu_icon visible-xs-block">
-                <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
-                <div class="run_string">
-                    <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, saepe.</marquee>
+                <div class="wrap_icon">
+                    <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
+                    <div class="run_string">
+                        <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, saepe.</marquee>
+                    </div>
                 </div>
             </div>
             <div class="wrapper_nav hidden-xs">
