Создана структура хэдэра сайта

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,9 @@
                 <div class="wrap_icon">
                     <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
                     <div class="run_string">
-                        <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, saepe.</marquee>
+                        <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Quaerat, saepe.
+                        </marquee>
                     </div>
                 </div>
             </div>
@@ -98,7 +100,7 @@
                 </ul>
             </div>
         </div><!-- /.container -->
-    </nav>
+    </nav><!--end navbar-->
     <nav class="mobile_menu visible-xs-block">
         <div class="container">
             <div id="mob_menu" class="collapse">
@@ -152,6 +154,43 @@
             </div><!--end #mob_menu-->
         </div><!--end container-->
     </nav><!--end mobile_menu-->
+    <div class="header_content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="wrap_site_info">
+                                <h1>СККО</h1>
+                                <div class="phone">
+                                    <i class="fa fa-phone-square"></i>
+                                    <span>8 (017) 268-37-78</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="wrap_slogan_info">
+                                <h3>Система контроля кассового оборудования</h3>
+                                <span>Управляйте своим бизнесом через интернет</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="battons">
+                        <batton class="login">
+                            <i class="fa fa-key" aria-hidden="true"></i>
+                            Вход с ЭЦП
+                        </batton>
+                        <batton class="mail">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            Электронная почта
+                        </batton>
+                    </div>
+                </div>
+            </div><!--end row-->
+        </div><!--end container-->
+    </div>
 </header>
 <section id="slider">
     <div class="container">
