улучшены кнопки авторизации и почты

--- a/src/index.html
+++ b/src/index.html
@@ -178,14 +178,14 @@
                 </div>
                 <div class="col-md-3">
                     <div class="battons">
-                        <batton class="login">
+                        <a class="login" href="#">
                             <i class="fa fa-key" aria-hidden="true"></i>
                             Вход с ЭЦП
-                        </batton>
-                        <batton class="mail">
+                        </a>
+                        <a class="mail" href="#">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             Электронная почта
-                        </batton>
+                        </a>
                     </div>
                 </div>
             </div><!--end row-->
