--- a/src/index.html
+++ b/src/index.html
@@ -85,18 +85,6 @@
                     <li><a href="#">Цто</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Наши партнёры</a></li>
-                    <!--<li class="dropdown">-->
-                    <!--<span>-->
-                    <!--Публикации-->
-                    <!--</span>-->
-                    <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
-                    <!--<ul>-->
-                    <!--<li><a href="#">Новости</a></li>-->
-                    <!--<li><a href="#">Нормативные правовые акты</a></li>-->
-                    <!--<li><a href="#">Разъяснения МНС</a></li>-->
-                    <!--</ul>-->
-                    <!--</li>-->
-
                 </ul>
             </div>
         </div><!-- /.container -->
@@ -157,9 +145,9 @@
     <div class="header_content">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-9">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-4">
                             <div class="wrap_site_info">
                                 <h1>СККО</h1>
                                 <div class="phone">
@@ -168,7 +156,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-sm-8">
                             <div class="wrap_slogan_info">
                                 <h3>Система контроля кассового оборудования</h3>
                                 <span>Управляйте своим бизнесом через интернет</span>
@@ -176,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-3">
                     <div class="battons">
                         <a class="login" href="#">
                             <i class="fa fa-key" aria-hidden="true"></i>
@@ -184,7 +172,7 @@
                         </a>
                         <a class="mail" href="#">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
-                            Электронная почта
+                            Почта
                         </a>
                     </div>
                 </div>
