Изменена структура адаптации кнопок шапки сайта

--- a/src/index.html
+++ b/src/index.html
@@ -164,16 +164,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="battons">
-                        <a class="login" href="#">
-                            <i class="fa fa-key" aria-hidden="true"></i>
-                            Вход с ЭЦП
-                        </a>
-                        <a class="mail" href="#">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                            Почта
-                        </a>
+                        <div class="row">
+                            <div class="col-sm-12 col-xs-6">
+                                <a class="login" href="#">
+                                    <i class="fa fa-key" aria-hidden="true"></i>
+                                    Вход с ЭЦП
+                                </a>
+                            </div>
+                            <div class="col-sm-12 col-xs-6">
+                                <a class="mail" href="#">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    Почта
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div><!--end row-->
