Добавлена панель поиска и бегущей строки

--- a/src/index.html
+++ b/src/index.html
@@ -184,8 +184,26 @@
                     </div>
                 </div>
             </div><!--end row-->
+            <div class="row hidden-xs">
+                <div class="wrap_panel">
+                    <div class="col-md-9 col-sm-8">
+                        Бегущая строка
+                    </div>
+                    <div class="col-md-3 col-sm-4">
+                        <div class="search">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Найти...">
+                                <span class="input-group-btn">
+                            <button class="btn btn-success" type="button">Поиск</button>
+                        </span>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                </div>
+            </div><!--end row-->
         </div><!--end container-->
-    </div>
+    </div><!-- end header_content-->
+
 </header>
 <section id="slider">
     <div class="container">
