Адаптирована форма поиска

--- a/src/index.html
+++ b/src/index.html
@@ -186,16 +186,17 @@
             </div><!--end row-->
             <div class="row hidden-xs">
                 <div class="wrap_panel">
-                    <div class="col-md-9 col-sm-8">
+                    <div class="col-md-8 col-sm-8">
                         Бегущая строка
                     </div>
-                    <div class="col-md-3 col-sm-4">
+                    <div class="col-md-4 col-sm-4">
                         <div class="search">
                             <div class="input-group">
+                                <i class="fa fa-search"></i>
                                 <input type="text" class="form-control" placeholder="Найти...">
                                 <span class="input-group-btn">
-                            <button class="btn btn-success" type="button">Поиск</button>
-                        </span>
+                                    <button class="btn btn-success" type="button">Поиск</button>
+                                 </span>
                             </div><!-- /input-group -->
                         </div>
                     </div>
