--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,16 @@
             <div class="row hidden-xs">
                 <div class="wrap_panel">
                     <div class="col-md-8 col-sm-8">
-                        Бегущая строка
+                        <div class="wrap_run_str">
+                            <div class="icons">
+                                <i class="fa fa-chevron-right sm" aria-hidden="true"></i>
+                                <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+                                <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+                            </div>
+                            <div class="run_str">
+                                Бегущая строка
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="search">
