--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
                                 <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                             </div>
                             <div class="run_str">
-                                Бегущая строка
+                                <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left"><span>Внимание!!!</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus nihil non officiis soluta veritatis?</marquee>
                             </div>
                         </div>
                     </div>
