Добавлена директива для остановки бегущей строки

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 <div class="wrap_icon">
                     <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
                     <div class="run_string">
-                        <marquee><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left"><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Quaerat, saepe.
                         </marquee>
                     </div>
