Добавлен код слайдера

--- a/src/index.html
+++ b/src/index.html
@@ -213,12 +213,30 @@
             </div><!--end row-->
         </div><!--end container-->
     </div><!-- end header_content-->
-
 </header>
 <section id="slider">
     <div class="container">
         <div class="slider_wrapper">
-
+            <div class="owl-carousel owl-theme">
+                <div class="item"><a href="#"><img src="images/baners/sys3.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/computer_center_service.jpg" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/electron_service.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/belkassa.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/tehconsalting.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/transitplus.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/autocombi2.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/your_reclama.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/htc.gif" alt=""></a></div>
+                <div class="item"><a href="#"><img src="images/baners/electron_service.gif" alt=""></a></div>
+            </div>
+            <div class="owl-controls">
+                <div class="owl-nav">
+                    <a class="owl-prev"><i class="fa fa-chevron-left fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a class="owl-next"><i class="fa fa-chevron-right fa-3x" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </div><!-- end /.owl-controls -->
         </div>
     </div>
 </section>
@@ -231,11 +249,11 @@
 <![endif]-->
 <script src="libs/jquery/jquery-3.2.1.min.js"></script>
 <script src="libs/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
 <script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 <script src="libs/fancybox/jquery.fancybox.pack.js"></script>
 <script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
 <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-<script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
 <script src="libs/countdown/jquery.plugin.js"></script>
 <script src="libs/countdown/jquery.countdown.min.js"></script>
 <script src="libs/countdown/jquery.countdown-ru.js"></script>
