Размещены контролы слайдера

--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
                     </a>
                 </div>
             </div><!-- end /.owl-controls -->
-        </div>
+        </div><!--end /.slider_wrapper-->
     </div>
 </section>
 
