Добавлена структура для модуля новостей

--- a/src/index.html
+++ b/src/index.html
@@ -240,6 +240,9 @@
         </div><!--end /.slider_wrapper-->
     </div>
 </section>
+<section id="news">
+
+</section>
 
 <!--[if lt IE 9]>
 <script src="libs/html5shiv/es5-shim.min.js"></script>
