Добавлена структура для блока новостей

--- a/src/index.html
+++ b/src/index.html
@@ -241,7 +241,23 @@
     </div>
 </section>
 <section id="news">
-
+<div class="container">
+    <div class="wrap_news">
+        <div class="row">
+            <h1>Новости</h1>
+            <div class="col-md-6">
+                <div class="top_article">
+                    Основная новость
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="articles">
+                    Дополнительные новости
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 
 <!--[if lt IE 9]>
