Добавлена структура и стили для главной новости

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
                 <div class="wrap_icon">
                     <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
                     <div class="run_string">
-                        <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left"><span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left">
+                            <span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Quaerat, saepe.
                         </marquee>
                     </div>
@@ -194,7 +195,10 @@
                                 <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                             </div>
                             <div class="run_str">
-                                <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left"><span>Внимание!!!</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus nihil non officiis soluta veritatis?</marquee>
+                                <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll"
+                                         direction="left"><span>Внимание!!!</span>Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit. Illo natus nihil non officiis soluta veritatis?
+                                </marquee>
                             </div>
                         </div>
                     </div>
@@ -241,23 +245,59 @@
     </div>
 </section>
 <section id="news">
-<div class="container">
-    <div class="wrap_news">
-        <div class="row">
-            <h1>Новости</h1>
-            <div class="col-md-6">
-                <div class="top_article">
-                    Основная новость
+    <div class="container">
+        <div class="wrap_news">
+            <div class="row">
+                <h1>Новости</h1>
+                <div class="col-md-6">
+                    <div class="top_article">
+                        <div class="image">
+                            <img src="images/articles/maxresdefault.jpg" alt="">
+                        </div>
+
+                        <div class="content">
+                            <div class="title">
+                                <div class="date">
+                                    <div class="day">27</div>
+                                    <div class="month">августа</div>
+                                    <div class="year">2017</div>
+                                </div>
+                                <h2>
+                                    <a href="#">
+                                        Как отправить договор СККО и сопутствующие документы почтой или нарочным?
+                                    </a>
+                                </h2>
+                            </div>
+                            <div class="text">
+                                <p>Заполненный и подписанный <a href="/vladeltsam/dokumenty">договор оказания услуг СККО&nbsp;</a>
+                                    и другие документы для его заключения могут быть направлены почтой:&nbsp;</p>
+                                <p>220005, г.Минск, пр. Машерова, 7-123</p>
+                                <p>либо предоставлены нарочным по месту расположения <a href="/kontakti/15-kontakty">отделов
+                                    технической поддержки СККО</a></p>
+                                <p>Ознакомиться с порядоком заключения договора вы можете<a
+                                        href="/vladeltsam/poryadok-zaklyucheniya-dogovora" target="_blank"> здесь.</a>
+                                </p>
+                            </div>
+
+                            <div class="link">
+                                <a href="/">
+                                    <span>Подробнее</span>
+                                    <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+
+
+                    </div><!--end top_article-->
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="articles">
-                    Дополнительные новости
+                <div class="col-md-6">
+                    <div class="articles">
+                        Дополнительные новости
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </section>
 
 <!--[if lt IE 9]>
