--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,84 @@
                 </div>
                 <div class="col-md-6">
                     <div class="articles">
-                        Дополнительные новости
+                        <div class="article">
+                            <div class="art_img">
+                                <img src="images/articles/attension.jpg" alt="">
+                            </div>
+                            <div class="art_cont">
+                                <div class="date">
+                                    25 сентября 2017
+                                </div>
+                                <div class="title">
+                                    <h3>
+                                        О корректировке сроков подключения СПД к АИС ККО.
+                                    </h3>
+                                </div>
+                                <div class="art_text">
+                                    <p>Постановлением Совета Министров Республики Беларусь и Национального банка
+                                        Республики Беларусь от 03.03.2017 №181/5 (далее - постановление №181/5) внесены
+                                        изменения в постановление Совета Министров Республики Беларусь и Национального
+                                        банка
+                                        Республики Беларусь "Об использовании кассового оборудования, платежных
+                                        терминалов,
+                                        автоматических электронных аппаратов, торговых автоматов и о приеме наличных
+                                        денежных средств, банковских платежных карточек при продаже товаров, выполнении
+                                        работ, оказании услуг, осуществлении деятельности в сфере игорного бизнеса,
+                                        лотерейной деятельности, проведении электронных интерактивных игр и выпуске в
+                                        обращение кассового оборудования" от 6 июля 2011 г. № 924/16. Изменения вступили
+                                        в
+                                        силу 9 марта 2017г.</p>
+                                    <p>Постановлением скорректированы сроки подключения кассового оборудования к системе
+                                        контроля кассового оборудования (СККО) для отдельных категорий субъектов
+                                        хозяйствования.</p>
+                                    <p>С учетом внесенных изменений, прием наличных денежных средств и (или) банковских
+                                        платежных карточек с применением кассового оборудования с установленным
+                                        средством контроля налоговых органов (СКНО) осуществляется субъектами
+                                        хозяйствования в следующие сроки:</p>
+                                </div>
+                                <div class="link">
+                                    <a href="">
+                                        <span>Подробнее</span>
+                                        <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="art_img">
+                                <img src="images/articles/bank_account.jpg" alt="">
+                            </div>
+                            <div class="art_cont">
+                                <div class="date">
+                                    25 сентября 2017
+                                </div>
+                                <div class="title">
+                                    <h3>
+                                        Об изменении банковских реквизитов.
+                                    </h3>
+                                </div>
+                                <div class="art_text">
+                                    <p>Республиканское унитарное предприятие "Информационно-издательский центр по
+                                        налогам и сборам" (далее – предприятие) (УНП 190819036) в связи со вступлением в
+                                        силу с 04.07.2017 постановления Правления Национального банка Республики
+                                        Беларусь от 27.07.2015 №440 «О структуре номера счета», переходом на
+                                        международную структуру банковского идентификационного кода в Республике
+                                        Беларусь информирует об изменении с 04.07.2017 своих банковских реквизитов:</p>
+                                    <p></p>
+                                    <p>р/с BY93 BPSB 3012 1049 7704 2933 0000</p>
+                                    <p>в региональной дирекции № 700 по г.Минску и Минской области ОАО
+                                        «БПС-Сбербанк»,</p>
+                                    <p>BIC BPSBBY2X,</p>
+                                    <p>адрес банка: 220035, г. Минск, пр. Машерова, 80.</p>
+                                </div>
+                                <div class="link">
+                                    <a href="">
+                                        <span>Подробнее</span>
+                                        <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
