Добавлена кнопка "смотреть все новости"

--- a/src/index.html
+++ b/src/index.html
@@ -372,6 +372,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-12">
+                    <div class="all_news">
+                        <button>
+                            <a href="#">Смотреть все новости</a></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
