Изменены размеры блока дополнительной новости

--- a/src/index.html
+++ b/src/index.html
@@ -382,6 +382,11 @@
         </div>
     </div>
 </section>
+<section id="block_links">
+    <div class="wrap_block_links">
+
+    </div>
+</section>
 
 <!--[if lt IE 9]>
 <script src="libs/html5shiv/es5-shim.min.js"></script>
