--- a/src/index.html
+++ b/src/index.html
@@ -383,8 +383,43 @@
     </div>
 </section>
 <section id="block_links">
-    <div class="wrap_block_links">
-
+    <div class="container">
+        <div class="wrap_block_links">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <h3>Разделы сайта</h3>
+                    <ul>
+                        <li><a href="">Главная</a></li>
+                        <li><a href="">О системе</a></li>
+                        <li><a href="">Владельцам</a></li>
+                        <li><a href="">Публикации</a></li>
+                        <li><a href="">Цто</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">Наши партнёры</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Рекомендуем</h3>
+                    <ul>
+                        <li><a href="http://ckta.by/" target="_blank" rel="noopener noreferrer">Система контроля
+                            торговых автоматов</a></li>
+                        <li><a href="http://pki.by/" target="_blank" rel="noopener noreferrer">Удостоверяющий центр РУП
+                            «Информационно-издательский центр по налогам и сборам»</a></li>
+                        <li><a href="https://nces.by" target="_blank" rel="noopener noreferrer">РУП «Национальный центр
+                            электронных услуг»</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h3>Местоположение</h3>
+                    <!-- Blank250 Starts Here -->
+                    <div class="blank">
+                        <script type="text/javascript" charset="utf-8" async
+                                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A92688d51a228164bcab825cd08db6ba04bf98ed47a6f84c9a35555cd9913037d&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
+                    </div>
+                    <!-- Blank250 Ends Here -->
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
