--- a/src/index.html
+++ b/src/index.html
@@ -422,6 +422,51 @@
         </div>
     </div>
 </section>
+<footer id="footer">
+    <div class="wrap_footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-4">
+
+                    <div id="foot_left_block" class="foot_block">
+                        <h3>Сервисы оплаты услуг</h3>
+                        <img src="images/baners/pay.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                    <div id="foot_center_block" class="foot_block">
+                        <h3>Разместить рекламу</h3>
+                        <p>
+                            Контактный телефон по вопросам размещения рекламы на сайте
+                        </p>
+                        <p>
+                            <i class="fa fa-phone-square" aria-hidden="true"></i>
+                            <span>8 (017) 269-19-08</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                    <div id="foot_right_block" class="foot_block">
+                        <h3>Техподдержка 24ч/7д</h3>
+                        <ul>
+                            <li><i class="fa fa-mobile-phone"></i><span>8 (029) 873-27-15</span></li>
+                            <li><i class="fa fa-mobile-phone"></i><span>8 (029) 873-57-81</span></li>
+                            <li><i class="fa fa-mobile-phone"></i><span>8 (025) 694-78-61</span></li>
+                            <li><i class="fa fa-envelope-o"></i><span>info@skko.by</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="all_reserve">
+            <img src="images/icons/rup_icon.png" alt="">
+            <p>РУП "Информационно-издательский центр по налогам и сборам". 2015 - 2017 год.</p>
+        </div>
+    </div>
+</footer>
 
 <!--[if lt IE 9]>
 <script src="libs/html5shiv/es5-shim.min.js"></script>
