Убрана надпись внимание из бегущей строки

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                     <i class="fa fa-bars" data-toggle="collapse" data-target="#mob_menu" aria-hidden="true"></i>
                     <div class="run_string">
                         <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll" direction="left">
-                            <span>Внимание!!!</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Quaerat, saepe.
                         </marquee>
                     </div>
@@ -196,7 +196,7 @@
                             </div>
                             <div class="run_str">
                                 <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll"
-                                         direction="left"><span>Внимание!!!</span>Lorem ipsum dolor sit amet,
+                                         direction="left">Lorem ipsum dolor sit amet,
                                     consectetur adipisicing elit. Illo natus nihil non officiis soluta veritatis?
                                 </marquee>
                             </div>
@@ -440,7 +440,7 @@
                             Контактный телефон по вопросам размещения рекламы на сайте
                         </p>
                         <p>
-                            <i class="fa fa-phone-square" aria-hidden="true"></i>
+                            <i class="fa fa-phone" aria-hidden="true"></i>
                             <span>8 (017) 269-19-08</span>
                         </p>
                     </div>
