Изменены кнопки "Подробнее" блока новостей

--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
                             <div class="link">
                                 <a href="/">
                                     <span>Подробнее</span>
-                                    <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                 </a>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                                 <div class="link">
                                     <a href="">
                                         <span>Подробнее</span>
-                                        <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
@@ -365,7 +365,7 @@
                                 <div class="link">
                                     <a href="">
                                         <span>Подробнее</span>
-                                        <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
