Подключено изображение банера платёжных сервисов

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
 
                     <div id="foot_left_block" class="foot_block">
                         <h3>Сервисы оплаты услуг</h3>
-                        <img src="images/baners/pay.jpg" alt="">
+                        <img src="images/baners/erip_pay.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
