--- a/src/index.html
+++ b/src/index.html
@@ -143,80 +143,62 @@
             </div><!--end #mob_menu-->
         </div><!--end container-->
     </nav><!--end mobile_menu-->
-    <div class="header_content">
+    <div class="wrap_header">
         <div class="container">
-            <div class="row">
-                <div class="col-md-9 col-sm-9">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-4">
-                            <div class="wrap_site_info">
-                                <h1>СККО</h1>
-                                <div class="phone">
-                                    <i class="fa fa-phone-square"></i>
-                                    <span>8 (017) 268-37-78</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8 col-sm-8">
-                            <div class="wrap_slogan_info">
-                                <h3>Система контроля кассового оборудования</h3>
-                                <span>Управляйте своим бизнесом через интернет</span>
-                            </div>
-                        </div>
+            <div class="header_content">
+                <div class="logo">
+                    <h1>СККО</h1>
+                    <div class="phone visible-xs">
+                        <i class="fa fa-phone-square" aria-hidden="true"></i>
+                        <span>8 (017) 269-18-00</span>
                     </div>
+                </div><!--end logo-->
+                <div class="site_title">
+                    <h2>Система контроля кассового оборудования</h2>
+                    <span class="visible-xs">Управляйте своим бизнесом через Internet</span>
+                </div><!-- end site_title-->
+                <div class="buttons">
+                    <a href="https://skko.by">
+                        <i class="fa fa-key" aria-hidden="true"></i>
+                        <span>Войти с ЭЦП</span>
+                    </a>
+                    <a href="http://inbox.skko.by/">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span>Почта</span>
+                    </a>
                 </div>
-                <div class="col-md-3 col-sm-3 col-xs-12">
-                    <div class="battons">
-                        <div class="row">
-                            <div class="col-sm-12 col-xs-6">
-                                <a class="login" href="#">
-                                    <i class="fa fa-key" aria-hidden="true"></i>
-                                    Вход с ЭЦП
-                                </a>
-                            </div>
-                            <div class="col-sm-12 col-xs-6">
-                                <a class="mail" href="#">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    Почта
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
+            </div><!-- end header_content-->
+            <div class="meta_info hidden-xs">
+                <div class="phone">
+                    <i class="fa fa-phone-square"></i>
+                    <span>8 (017) 269-18-00</span>
                 </div>
-            </div><!--end row-->
-            <div class="row hidden-xs">
-                <div class="wrap_panel">
-                    <div class="col-md-8 col-sm-8">
-                        <div class="wrap_run_str">
-                            <div class="icons">
-                                <i class="fa fa-chevron-right sm" aria-hidden="true"></i>
-                                <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
-                                <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
-                            </div>
-                            <div class="run_str">
-                                <marquee onmouseover=this.stop() onmouseout=this.start() behavior="scroll"
-                                         direction="left">Lorem ipsum dolor sit amet,
-                                    consectetur adipisicing elit. Illo natus nihil non officiis soluta veritatis?
-                                </marquee>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4">
-                        <div class="search">
-                            <div class="input-group">
-                                <i class="fa fa-search"></i>
-                                <input type="text" class="form-control" placeholder="Найти...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-success" type="button">Поиск</button>
-                                 </span>
-                            </div><!-- /input-group -->
-                        </div>
-                    </div>
+                <div class="slogan">
+                    <span>Управляйте своим бизнесом через Internet</span>
                 </div>
-            </div><!--end row-->
+            </div><!-- end meta_info-->
+            <div class="panel">
+                <div class="icons">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="run_string">
+                    <marquee onmouseover="this.stop()" onmouseout="this.start()" behavior="scroll" direction="left">
+                        Поздравляем Вас с Рождеством и Новым годом!
+                    </marquee>
+                </div>
+                <div class="search">
+                    <form action="" method="post">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <input type="text" placeholder="Искать..." >
+                        <button type="submit" onclick="this.form.searchword.focus();">Поиск</button>
+                    </form>
+                </div>
+            </div><!-- end panel-->
         </div><!--end container-->
-    </div><!-- end header_content-->
+    </div><!-- end wrap_header-->
+
 </header>
 <section id="slider">
     <div class="container">
