--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                     <span>Управляйте своим бизнесом через Internet</span>
                 </div>
             </div><!-- end meta_info-->
-            <div class="panel">
+            <div class="panel hidden-xs">
                 <div class="icons">
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
